--- a/WeddingApp/WeddingApp/Views/UserControls/Admin/DishListUC.xaml
+++ b/WeddingApp/WeddingApp/Views/UserControls/Admin/DishListUC.xaml
@@ -5,7 +5,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:WeddingApp.Views.UserControls.Admin" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d"
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800"
+             x:Name="dishListUC"
+             DataContext="{StaticResource dishListVM}">
     <materialDesign:TransitioningContent OpeningEffect="{materialDesign:TransitionEffect Kind=SlideInFromRight,Duration=0:0:0.5}">
         <Grid>
             <Grid>
@@ -46,8 +48,8 @@
                     VerticalAlignment="Center"
                     Grid.Column="3"
                     Margin="0 10 0 0"
-                    Command="{Binding AddProductCommand}"
-                    CommandParameter="{Binding ElementName= EditUC}" />
+                    Command="{Binding OpenAddDishListWindowCommand}"
+                    CommandParameter="{Binding ElementName=dishListUC}"/>
                 </Grid>
                 <!--header-->
 
