--- a/WeddingApp/WeddingApp/Resources/XAML/MainResources.xaml
+++ b/WeddingApp/WeddingApp/Resources/XAML/MainResources.xaml
@@ -5,4 +5,5 @@
     <viewmodels:DashBoardVM x:Key="dashBoardVM"></viewmodels:DashBoardVM>
     <viewmodels:EmployeeListVM x:Key="employeeListVM"></viewmodels:EmployeeListVM>
     <viewmodels:DishListVM x:Key="dishListVM"></viewmodels:DishListVM>
+    <viewmodels:ServiceListVM x:Key="serviceListVM"></viewmodels:ServiceListVM>
 </ResourceDictionary>
