--- a/WeddingApp/WeddingApp/Views/UserControls/Admin/ServiceListUC.xaml
+++ b/WeddingApp/WeddingApp/Views/UserControls/Admin/ServiceListUC.xaml
@@ -5,6 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:WeddingApp.Views.UserControls.Admin" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d"
+             x:Name="serviceList"
+             DataContext="{StaticResource serviceListVM}"
              d:DesignHeight="450" d:DesignWidth="800">
     <materialDesign:TransitioningContent OpeningEffect="{materialDesign:TransitionEffect Kind=SlideInFromRight,Duration=0:0:0.5}">
         <Grid>
@@ -46,8 +48,8 @@
                     VerticalAlignment="Center"
                     Grid.Column="3"
                     Margin="0 10 0 0"
-                    Command="{Binding AddProductCommand}"
-                    CommandParameter="{Binding ElementName= EditUC}" />
+                    Command="{Binding OpenAddServiceListWindowCommand}"
+                    CommandParameter="{Binding ElementName= serviceList}" />
                 </Grid>
                 <!--header-->
 
