--- a/WeddingApp/WeddingApp/Views/AddEmployeeWindow.xaml
+++ b/WeddingApp/WeddingApp/Views/AddEmployeeWindow.xaml
@@ -1,4 +1,6 @@
 ﻿<Window x:Class="WeddingApp.Views.AddEmployeeWindow"
+        x:Name="AddEmployeeWD"
+        DataContext="{StaticResource employeeListVM}"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -27,10 +29,17 @@
     <materialDesign:TransitioningContent OpeningEffect="{materialDesign:TransitionEffect Kind=ExpandIn,Duration=0:0:0.2}">
         <Grid>
             <Grid Margin="10">
-                <uc:ControlBarUC></uc:ControlBarUC>
+                <uc:ControlBarUC Margin="0,-40,0,0"></uc:ControlBarUC>
                 <StackPanel>
+                    <!--nhập thông tin đăng ký-->
+                    <!--nhập thông tin đăng ký-->
+                    <!--nhập thông tin đăng ký-->
+                    <!--nhập thông tin đăng ký-->
+                    <!--nhập thông tin đăng ký-->
+                    <!--nhập thông tin đăng ký-->
+                    <!--nhập thông tin đăng ký-->
                     <Label
-                x:Name="lblChangeinfo"
+                x:Name="lblAddEmployee"
                 Content="Thêm nhân viên"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Top"
@@ -40,7 +49,7 @@
                 VerticalContentAlignment="Center"
                 FontSize="40"
                 FontWeight="Bold"
-                Margin="0,30,0,0" />
+                Margin="60,0,60,25" Height="46" />
                     <!--nhập thông tin đăng ký-->
                     <Grid
                         x:Name="grdInformation"
@@ -50,7 +59,7 @@
                         Visibility="Visible">
 
                         <StackPanel Orientation="Vertical"
-                                    VerticalAlignment="Stretch">
+                                    VerticalAlignment="Stretch" Margin="0,-87,0.4,86.8">
                             <!--họ tên-->
                             <StackPanel x:Name="nameStack"
                                 Orientation="Horizontal" Margin="0 20">
@@ -62,7 +71,8 @@
                                     VerticalAlignment="Center"
                                     Margin="10,10,20,-18" />
                                 <TextBox
-                                    x:Name="txtFullname"
+                                    x:Name="txtEmployeeName"
+                                    Text="{Binding EmployeeName}"
                                     TabIndex="2"
                                 materialDesign:HintAssist.Hint="Họ và tên"
                                 Style="{StaticResource MaterialDesignFloatingHintTextBox}"
@@ -74,8 +84,7 @@
                                 Width="250"
                                 VerticalContentAlignment="Center"
                                 Height="50"
-                                Padding="2,0,0,0">
-                                </TextBox>
+                                Padding="2,0,0,0"/>
                             </StackPanel>
                             <!--Tên đăng nhập-->
                             <StackPanel x:Name="usernameStack"
@@ -88,7 +97,8 @@
                                         VerticalAlignment="Top"
                                         Margin="10,10,20,-18" />
                                 <TextBox
-                                        x:Name="txtMail"
+                                        x:Name="txtUsername"
+                                        Text="{Binding UserName}"
                                         TabIndex="0"
                                     materialDesign:HintAssist.Hint="Tên đăng nhập"
                                     Style="{StaticResource MaterialDesignFloatingHintTextBox}"
@@ -100,36 +110,71 @@
                                     Width="250"
                                     VerticalContentAlignment="Center"
                                     Height="50"
-                                    Padding="2,0,0,0">
-                                </TextBox>
+                                    Padding="2,0,0,0"/>
                             </StackPanel>
-                            <!--Mật khẩu-->
-                            <StackPanel x:Name="phoneStack"
-                                Orientation="Horizontal" Margin="0 20">
+                            <!--password-->
+                            <StackPanel Orientation="Horizontal" Margin="0 20">
                                 <materialDesign:PackIcon
                                     Kind="Password"
                                     Width="30"
                                     Height="30"
                                     Foreground="{StaticResource Gray}"
                                     VerticalAlignment="Center"
-                                    Margin="10,10,20,-18" />
-                                <TextBox
-                                    x:Name="txtPhone"
-                                    TabIndex="1"
-                                materialDesign:HintAssist.Hint="Mật khẩu"
-                                Style="{StaticResource MaterialDesignFloatingHintTextBox}"
-                                Foreground="Black"
-                                FontSize="16"
-                                FontWeight="Medium"
-                                materialDesign:HintAssist.Foreground="{StaticResource Gray}"
-                                materialDesign:TextFieldAssist.UnderlineBrush="{StaticResource Gray}"
-                                Width="250"
-                                VerticalContentAlignment="Center"
-                                Height="50"
-                                Padding="2,0,0,0">
-                                </TextBox>
+                                    Margin="10,10,20,-14" />
+                                <PasswordBox
+                                  x:Name="PasswordBox"
+                                    TabIndex="3"
+                                  materialDesign:HintAssist.Hint="Mật khẩu"
+                                  materialDesign:HintAssist.Foreground="{StaticResource Gray}"
+                                  materialDesign:TextFieldAssist.UnderlineBrush="{StaticResource Gray}"
+                                  Style="{StaticResource MaterialDesignFloatingHintPasswordBox}"
+                                   VerticalContentAlignment="Center"
+                                    Foreground="Black"
+                                    Width="250"
+                                    Height="50"
+                                    FontSize="16"
+                                    FontWeight="Medium"
+                                    Padding="2,0,0,0" >
+                                    <i:Interaction.Triggers>
+                                        <i:EventTrigger EventName="PasswordChanged">
+                                            <i:InvokeCommandAction Command="{Binding PasswordChangedCommand}" 
+                                                   CommandParameter="{Binding ElementName=PasswordBox}"/>
+                                        </i:EventTrigger>
+                                    </i:Interaction.Triggers>
+                                </PasswordBox>
                             </StackPanel>
-                            <!--địa chỉ-->
+                            <!--repassword-->
+                            <StackPanel Orientation="Horizontal" Margin="0 20">
+                                <materialDesign:PackIcon
+                                    Kind="Password"
+                                    Width="30"
+                                    Height="30"
+                                    Foreground="{StaticResource Gray}"
+                                    VerticalAlignment="Center"
+                                    Margin="10,10,20,-14" />
+                                <PasswordBox
+                                  x:Name="RePasswordBox"
+                                    TabIndex="4"
+                                  materialDesign:HintAssist.Hint="Nhập lại mật khẩu"
+                                  materialDesign:HintAssist.Foreground="{StaticResource Gray}"
+                                  materialDesign:TextFieldAssist.UnderlineBrush="{StaticResource Gray}"
+                                  Style="{StaticResource MaterialDesignFloatingHintPasswordBox}"
+                                  VerticalContentAlignment="Center"
+                                    Foreground="Black"
+                                    Width="250"
+                                    Height="50"
+                                    FontSize="16"
+                                    FontWeight="Medium"
+                                    Padding="2,0,0,0" >
+                                    <i:Interaction.Triggers>
+                                        <i:EventTrigger EventName="PasswordChanged">
+                                            <i:InvokeCommandAction Command="{Binding RePasswordChangedCommand}" 
+                                                   CommandParameter="{Binding ElementName=RePasswordBox}"/>
+                                        </i:EventTrigger>
+                                    </i:Interaction.Triggers>
+                                </PasswordBox>
+                            </StackPanel>
+                            <!--lương-->
                             <StackPanel Orientation="Horizontal" Margin="0 20">
                                 <materialDesign:PackIcon
                                     Kind="Money"
@@ -139,7 +184,8 @@
                                     VerticalAlignment="Center"
                                     Margin="10,10,20,-18" />
                                 <TextBox
-                                    x:Name="txtAddress"
+                                    x:Name="txtSalary"
+                                    Text="{Binding Salary}"
                                     TabIndex="2"
                                 materialDesign:HintAssist.Hint="Mức lương"
                                 Style="{StaticResource MaterialDesignFloatingHintTextBox}"
@@ -151,18 +197,18 @@
                                 Width="250"
                                 VerticalContentAlignment="Center"
                                 Height="50"
-                                Padding="2,0,0,0">
-                                </TextBox>
+                                Padding="2,0,0,0"/>
                             </StackPanel>
                             <!--ngày vào làm-->
                             <StackPanel Orientation="Horizontal" Margin="20 20">
-                                <DatePicker
+                                <DatePicker Foreground="Black"
+                                            x:Name="txtDate"
+                                  SelectedDate="{Binding Date, Mode=TwoWay}"
                                   Width="250"
                                   materialDesign:HintAssist.Hint="Chọn ngày vào làm"
                                   Style="{StaticResource MaterialDesignOutlinedDatePicker}" />
                             </StackPanel>
                             <Button
-                                x:Name="saveBtn"
                             TabIndex="5"
                             IsDefault="True"
                             Style="{StaticResource GreenBtn}"
@@ -172,9 +218,8 @@
                             Margin="0 20 0 0"
                             FontSize="20"
                             Foreground="White"
-                            Command="{Binding SaveInfoCommand}"
-                            CommandParameter="{Binding ElementName=changeInfoWD}">
-                            </Button>
+                            Command="{Binding AddEmployeeCommand}"
+                            CommandParameter="{Binding ElementName=AddEmployeeWD}"/>
                         </StackPanel>
                     </Grid>
                 </StackPanel>
@@ -188,7 +233,7 @@
             RadiusX="10"
             Panel.ZIndex="-2"
             Effect="{StaticResource dropShadow}"
-            Margin="10">
+            Margin="10,-31,10,10">
             </Rectangle>
         </Grid>
     </materialDesign:TransitioningContent>
