--- a/WeddingApp/WeddingApp/Views/WeddingDetailWindow.xaml
+++ b/WeddingApp/WeddingApp/Views/WeddingDetailWindow.xaml
@@ -22,6 +22,11 @@
     <materialDesign:TransitioningContent OpeningEffect="{materialDesign:TransitionEffect Kind=SlideInFromRight,Duration=0:0:0.5}">
         <Grid x:Name="print">
             <uc:ControlBarUC x:Name="controlBar" Margin="10" Panel.ZIndex="99"></uc:ControlBarUC>
+            <Button x:Name="printBtn" Panel.ZIndex="99"
+                HorizontalAlignment="Left" Margin="20" Background="{StaticResource Orange1}" VerticalAlignment="Top"
+                CommandParameter="{Binding ElementName=InvoiceWd}">
+                <materialDesign:PackIcon Kind="Edit" />
+            </Button>
             <Grid>
                 <Grid>
                     <Grid.RowDefinitions>
@@ -49,6 +54,7 @@
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="1*" />
                                 <ColumnDefinition Width="1*" />
+                                <ColumnDefinition Width="1*" />
                             </Grid.ColumnDefinitions>
                             <StackPanel Grid.Column="0" Background="Transparent">
                                 <StackPanel Orientation="Horizontal">
@@ -60,21 +66,35 @@
                                     <TextBlock Text="{Binding Receipt.USER.FULLNAME_}" FontSize="12" Margin="5" FontWeight="DemiBold" />
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal">
-                                    <TextBlock Text="Ngày mua:" FontSize="15" Margin="5" />
+                                    <TextBlock Text="Điện thoại:" FontSize="15" Margin="5" />
                                     <TextBlock Text="{Binding Receipt.DATE_, StringFormat={} {0:dd/MM/yyyy HH:mm}}" FontSize="12" Margin="5" FontWeight="DemiBold" />
                                 </StackPanel>
                             </StackPanel>
                             <StackPanel Grid.Column="1">
                                 <StackPanel Orientation="Horizontal">
-                                    <TextBlock Text="Số lượng bàn: " FontSize="15" Margin="5" />
+                                    <TextBlock Text="Ngày đãi tiệc: " FontSize="15" Margin="5" />
                                     <TextBlock Text="{Binding Receipt.ID_}" FontSize="15" Margin="5" FontWeight="DemiBold" />
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal">
-                                    <TextBlock Text="Đơn giá bàn: " FontSize="15" Margin="5" />
+                                    <TextBlock Text="Ca: " FontSize="15" Margin="5" />
                                     <TextBlock Text="{Binding Receipt.USER.FULLNAME_}" FontSize="12" Margin="5" FontWeight="DemiBold" />
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal">
-                                    <TextBlock Text="Tổng tiền bàn: " FontSize="15" Margin="5" />
+                                    <TextBlock Text="Sảnh: " FontSize="15" Margin="5" />
+                                    <TextBlock Text="{Binding Receipt.DATE_, StringFormat={} {0:dd/MM/yyyy HH:mm}}" FontSize="12" Margin="5" FontWeight="DemiBold" />
+                                </StackPanel>
+                            </StackPanel>
+                            <StackPanel Grid.Column="2">
+                                <StackPanel Orientation="Horizontal">
+                                    <TextBlock Text="Tiền đặt cọc: " FontSize="15" Margin="5" />
+                                    <TextBlock Text="{Binding Receipt.ID_}" FontSize="15" Margin="5" FontWeight="DemiBold" />
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal">
+                                    <TextBlock Text="Số lượng bàn: " FontSize="15" Margin="5" />
+                                    <TextBlock Text="{Binding Receipt.USER.FULLNAME_}" FontSize="12" Margin="5" FontWeight="DemiBold" />
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal">
+                                    <TextBlock Text="Số bàn dự trữ: " FontSize="15" Margin="5" />
                                     <TextBlock Text="{Binding Receipt.DATE_, StringFormat={} {0:dd/MM/yyyy HH:mm}}" FontSize="12" Margin="5" FontWeight="DemiBold" />
                                 </StackPanel>
                             </StackPanel>
